# streamlit-demo

./: README.md  demo2.py  demo3.py  pyproject.toml
.streamlit/: config.toml
agent/: agent2.py
src/agent/: barley_agent.py  data_agent.py  medal_agent.py  openai_agent.py  schema.py  simple1_agent.py  simple_agent.py  simple_tool.py  tool_agent.py
src/data/: medal_list.json  medal_list1.json  medal_list2.json  medal_long.json  medal_width.json
src/ui/: demo1.py  demo10.py  demo2.py  demo20.py  demo21.py  demo3.py  demo30.py  demo31.py  demo4.py  demo40.py
src/utils/: cache.py  common_util.py
tests/agent/: common_test.py
