[project]
name = "streamlit-demo"
version = "0.1.0"
description = "streamlit simple demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "streamlit[charts]>=1.52.2",
    "tabulate>=0.9.0",
    "vega-datasets>=0.9.0",
]
 
[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "langgraph-cli[inmem]>=0.4.7",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]

